@@ -26,7 +26,9 @@ Zend Framework                                                             NEWS
 - Fixed access mode handling in Zend_Log_Adapter_File, ticket #108. (Mike)
 - Fixed bug in Zend_Pdf command line demo, ticket #11. (Mike)
 - Fixed bug in Zend_Db_Table_Row::save(), ticket #50. (Mike)
-- Fixed bug in Zend_Db_Adapter_Pdo_Mysql::describeTable having NOT NULL, ticket #81, changeset [487] (Rob)
+- Fixed bug in Zend_Db_Adapter_Pdo_Mysql::describeTable having NOT NULL, 
+  ticket #81, changeset [487] (Rob)
+- Zend_Uri_Http now uses the default Zend_Filter::isHostname() rules. (Mike)
 
 =RELEASE 0.1.3 / 18-Apr-2006=
 - Zend_Filter is* methods return strictly TRUE or FALSE. (Chris)
